--- a/style.css
+++ b/style.css
@@ -1,58 +1,35 @@
-/* ================================= 
-  Base Element Styles
-==================================== */
-
-* {
-    margin: 0;
-    padding: 0;
+*{
+    margin:0;
+    padding:0;
     box-sizing: border-box;
+       
 }
-
 a{
-    text-decoration: none;
+    text-decoration:none;
 }
-
-
-/* ================================= 
-  Base Layout Styles
-==================================== */
-
-/* ---- Layout Containers ---- */
-
 .wrapper{
-    display: flex;
+    display:flex;
     width: 80%;
     margin: 0 auto;
-    justify-content: space-between;
-    align-items: center;
+    justify-content:space-between
+align-items:center;
 }
 
 .main-header{
     background-color: rgba(232, 99, 78, 1);
 }
-
-
-/* ================================= 
- 	Page Elements
-==================================== */
-.logo a{
+.logo a {
     font-family: 'Pacifico', cursive;
-    color: white;
+    color:white;
 }
-
-/* ---- Navigation ---- */
-
 .main-nav a{
     color: white;
-    margin-right: 5px;
-    padding: 5px;
-    font-size: 1.2rem;
+    margin-right:5px;
+    padding:5px;
 }
-
-.main-nav a:last-child{
-    margin-right: 0;
-}
-
+ .main-nav a:last-child {
+        margin-right: 0;
+    }
 .main-nav i{
-    margin-right: 3px;
-}
+    color:aqua;
+    margin: right 5px;
