--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ a{
     display: flex;
     width: 80%;
     margin: 0 auto;
-    justify-content:space-between
+    justify-content:space-between;
 align-items:center;
 }
 
